[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/3D models/terrain/terrain.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/3D models/WoodShed/woodshed.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/UI/Blink.png" type="Texture" id=3]
[ext_resource path="res://scenes/Room0.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/MinimalUI/EquipmentPro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/DarkStorm4K.hdr" type="Texture" id=6]
[ext_resource path="res://assets/textures/general/YellowEyes.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=10]
resource_name = "Blink"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("CustomFader/BlinkControl/PlayerCamera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -54.802, 1.543, -21.613 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomFader/BlinkControl/PlayerCamera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 90 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CustomFader/BlinkControl/bTop:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1, 1.5, 2.5, 3.5, 4.5, 5.2, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -550 ), Vector2( 0, -550 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -550 ), Vector2( 0, -550 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CustomFader/BlinkControl/bBottom:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1, 1.5, 2.5, 3.5, 4.5, 5.2, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 170 ), Vector2( 0, 750 ), Vector2( 0, 750 ), Vector2( 0, 170 ), Vector2( 0, 170 ), Vector2( 0, 750 ), Vector2( 0, 750 ), Vector2( 0, 170 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Drag"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("CustomFader/BlinkControl/PlayerCamera:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 75, 90, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomFader/BlinkControl/PlayerCamera:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 2, 2.7, 3.4, 4, 4.7, 5.3, 6, 6.6, 7.2, 7.8, 8.5, 9.1, 9.7, 10.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -158.104, 1.77492, -21.815 ), Vector3( -158.104, 1.775, -22 ), Vector3( -158.104, 1.775, -27 ), Vector3( -158.104, 1.775, -27 ), Vector3( -158.104, 1.775, -32 ), Vector3( -158.104, 1.775, -32 ), Vector3( -158.104, 1.775, -37 ), Vector3( -158.104, 1.775, -37 ), Vector3( -158.104, 1.775, -42 ), Vector3( -158.104, 1.775, -42 ), Vector3( -158.104, 1.775, -47 ), Vector3( -158.104, 1.775, -47 ), Vector3( -158.104, 1.775, -52 ), Vector3( -158.104, 1.775, -52 ), Vector3( -158.104, 2.23789, -57 ), Vector3( -158.104, 2.23789, -57 ), Vector3( -158.115, 2.46696, -61.9864 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CustomFader/BlinkControl/bBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 2.5, 3.8, 5.1, 6.1, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 170 ), Vector2( 0, 570 ), Vector2( 0, 570 ), Vector2( 0, 170 ), Vector2( 0, 570 ), Vector2( 0, 570 ), Vector2( 0, 170 ), Vector2( 0, 170 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CustomFader/BlinkControl/bTop:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 2.5, 3.8, 5.1, 6.1, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -400 ), Vector2( 0, -400 ), Vector2( 0, 0 ), Vector2( 0, -400 ), Vector2( 0, -400 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Enter"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CustomFader/BlinkControl/PlayerCamera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -34.8816, 9.74284, -42.5394 ), Vector3( -30.4883, 9.59404, -47.8723 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomFader/BlinkControl/PlayerCamera:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -41.312, 0 ), Vector3( 0, -41.312, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CustomFader:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Intro"
length = 19.7
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CustomFader/BlinkControl/PlayerCamera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 6.5, 7.5, 18.5, 18.875, 19.25, 19.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -54.802, 1.543, -21.613 ), Vector3( -54.802, 1.543, -21.613 ), Vector3( -54.6819, 1.97747, -21.6126 ), Vector3( -54.6819, 3.70923, -21.6126 ), Vector3( -54.682, 9.74284, -21.613 ), Vector3( -54.682, 9.74284, -21.613 ), Vector3( -50.722, 8.743, -25.798 ), Vector3( -42.802, 8.91, -34.168 ), Vector3( -34, 9.743, -42.539 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomFader/BlinkControl/PlayerCamera:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 6.5, 7.5, 8, 9, 9.5, 11, 12, 12.5, 13.25, 14.5, 15.5, 16.5, 16.75, 17.375, 18.125, 18.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 90 ), Vector3( 0, 0, 90 ), Vector3( -4.11607e-07, 17.861, 15.376 ), Vector3( -29.1591, 52.3617, -7.00272 ), Vector3( 0, 52.362, 0 ), Vector3( 0, 52.362, 0 ), Vector3( 0, 146.036, 0 ), Vector3( 0, 146.036, 0 ), Vector3( 0, 52.362, 0 ), Vector3( 0, -60, 0 ), Vector3( 0, -41.312, 0 ), Vector3( 0, -41.312, 0 ), Vector3( 0, -71.312, 0 ), Vector3( 0, -100.312, 0 ), Vector3( 0, -130.312, 0 ), Vector3( 0, -101.135, 0 ), Vector3( 0, -101.135, 0 ), Vector3( 0, -41.312, 0 ), Vector3( 0, -41.312, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CustomFader/BlinkControl/bTop:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.125, 1.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -550 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CustomFader/BlinkControl/bBottom:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.125, 1.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 170 ), Vector2( 0, 720 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EyePosition:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 16.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CustomFader/BlinkControl/PlayerCamera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -54.8023, 1.73449, -21.6126 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomFader/BlinkControl/PlayerCamera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 69.556 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CustomFader/BlinkControl/bBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 170 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CustomFader/BlinkControl/bTop:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CustomFader:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EyePosition:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="PanoramaSky" id=8]
panorama = ExtResource( 6 )

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 8 )
background_energy = 0.4
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0.74902, 1, 0.964706, 1 )
fog_depth_end = 50.0
adjustment_enabled = true
adjustment_contrast = 1.01

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 2 )

[node name="Room0" type="Spatial"]
script = ExtResource( 4 )

[node name="CustomFader" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="BlinkControl" type="Control" parent="CustomFader"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bTop" type="TextureRect" parent="CustomFader/BlinkControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 1280.0
margin_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="bBottom" type="TextureRect" parent="CustomFader/BlinkControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 170.0
margin_right = 1280.0
margin_bottom = 719.998
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
flip_v = true

[node name="PlayerCamera" type="Camera" parent="CustomFader/BlinkControl"]
transform = Transform( 0.349292, -0.937014, 0, 0.937014, 0.349292, 0, 0, 0, 1, -54.8023, 1.73449, -21.6126 )
far = 8192.0

[node name="SpotLight" type="SpotLight" parent="CustomFader/BlinkControl/PlayerCamera"]
spot_range = 312.001
spot_angle = 30.9916

[node name="PromptText" type="Label" parent="CustomFader"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.0
margin_bottom = 15.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Press E to wake up"
align = 1
valign = 1

[node name="IntroAnim" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 10 )
anims/Drag = SubResource( 5 )
anims/Enter = SubResource( 9 )
anims/Intro = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Terrain" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="IntroEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="Shed" type="Spatial" parent="."]
transform = Transform( 1.99315, 0, 0.165408, 0, 2, 0, -0.165408, 0, 1.99315, 45.3873, -1.59104, 37.767 )

[node name="Shed" type="MeshInstance" parent="Shed"]
transform = Transform( 0.0145796, 0, -0.0136907, 0, 0.02, 0, 0.0136907, 0, 0.0145796, -37.5159, 0.604098, -49.7502 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")

[node name="ShedInside" type="MeshInstance" parent="Shed"]
transform = Transform( 3.28041, 0, -2.39587, 0, 3, 0, 3.0804, 0, 2.55143, -30.9784, 3.27155, -49.3216 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="OmniLight" type="OmniLight" parent="Shed"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -30.8879, 4.68003, -49.1793 )
omni_range = 40.83
omni_attenuation = 2.00001

[node name="EyePosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.5297, 9.23686, -10.7365 )

[node name="Eyes" type="Sprite3D" parent="EyePosition"]
billboard = 2
texture = ExtResource( 7 )

[connection signal="animation_finished" from="IntroAnim" to="." method="_on_IntroAnim_animation_finished"]
